# Programming-Challenges

./: .ccls  .gitignore  CMakeLists.txt  LICENSE  README.md  shell.nix
10041_vitos_family/: CMakeLists.txt  README.md  Solution.md  vito_random.c
10110_light_more_light/: 10110_light_more_light.c  10137_solution.md
10137_the_trip/: 10137_solution.md
10189_minesweeper/: 10189_minesweeper.c  CMakeLists.txt  README.md  Solution.md
30-days-leetcode/: day1.cpp  day10.cpp  day14.cpp  day15.py  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day8.cpp  day9.cpp
adhoc/: A-dawid-and-bags-of-candies.cpp  B-ania-and-minimizing.cpp  C-anandi-and-domino.cpp  Prefixes.java  Shooting.java  anarc09a-seinfeld.cpp  hc17_heidi_easy.cpp
adhoc/10041_vitos_family/: 10041_solution.md  vito_median.c  (+2 more)
codeforces-round-634-div3/: a.cpp  b.cpp  c.cpp
geometry/: WhiteSheet.java
graphs/: 10034-freckles-kruskal.cpp  10034-freckles.cpp  10039-railroads.cpp  10054-the-necklace.cpp  10092_the_problem_with_the_problem_setter_adj_list.cpp  10092_the_problem_with_the_problem_setter_dfs.cpp  10158_war.cpp  10199_tourist_guide.cpp  10249_the_grand_dinner.cpp  10249_the_grand_dinner_insertion_sort.cpp  10249_the_grand_dinner_priority_queue.cpp  10278-fire-station.cpp  chicago_106_miles_to_chicago.cpp  roadnet.cpp
number-theory/: 10006_carmichael_numbers.cpp  10042_smith_numbers.cpp  10090_marbles.cpp  10104_extended_euclid.cpp  10139_factovisors.cpp  10168_summation_of_four_primes.cpp  Divfact.cpp  amre11_distinct_primes.cpp  divsum.cpp
(+9 files in other folders)
